# hyper-vibeshopping

./: .dockerignore  .env.template  .gitignore  .gitlab-ci.yml  DockerFile  README.md  docker-compose.yml  postman_collection.json  pyproject.toml
consumer/: app.py  requirements.txt
data/db/: cust_info.xlsx  purchase.xlsx
front_end/: index.html  index_new.html  login.html
producer/: Dockerfile  app.py
src/: app.py  consumer.py  producer.py  rpc.py  sample_item_desc.py  service.py
src/database/: setup_db.py
src/embedding/: local_embedding.py
src/modules/: history.py  image_caption.py  llm.py  login.py
src/services/: service.py
utils/: encode_base64.py  retrieval.py  save_embeddings.py  set_up_vector_db.py
