[project]
name = "hyper-vibeshopping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "pandas>=2.3.1",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "python-dotenv>=1.1.1",
    "pip>=25.2",
    "aift>=1.3.2",
]
