[project]
name = "hyper-vibeshopping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "pandas>=2.3.1",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "vllm>=0.10.0",
    "accelerate>=1.9.0",
    "pyperclip>=1.9.0",
]
