[project]
name = "hyper-vibeshopping"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "pandas>=2.3.1",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "accelerate>=1.9.0",
    "pyperclip>=1.9.0",
    "python-dotenv>=1.1.1",
    "pip>=25.2",
    "aift>=1.3.2",
    "fastapi>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "pika>=1.3.2",
    "torchvision>=0.22.1",
    "python-multipart>=0.0.20",
    "bitsandbytes>=0.46.1",
]
